--- a/app/RFQ_Components/Air_Freight/AirFreight.html
+++ b/app/RFQ_Components/Air_Freight/AirFreight.html
@@ -1,18 +1,30 @@
-<div class="form-group">
-  <input type="text" placeholder="FCL - LCL..." class="form-control mb-3" name="FCL_LCL" ngModel>
-  <input type="text" placeholder="CBM" class="form-control mb-3" name="CBM" ngModel>
-  <input type="text" placeholder="Equipment Type" class="form-control mb-3" name="Equipment_Type" ngModel>
-  <input type="text" placeholder="maximum per item weight kg" class="form-control mb-3" name="maximum_per_item_weight_kg" ngModel>
-  <input type="text" placeholder="Shipping Term" class="form-control mb-3" name="Shipping_Term" ngModel>
-  <input type="text" placeholder="Incoterm" class="form-control mb-3" name="Incoterm" ngModel>
-  <input type="text" placeholder="Need Insurance" class="form-control mb-3" name="Need_Insurance" ngModel>
-  <input type="text" placeholder="Value of Goods" class="form-control mb-3" name="Value_of_Goods" ngModel>
-  <input type="text" placeholder="Dangerous Commodity" class="form-control mb-3" name="Dangerous_Commodity" ngModel>
-  <input type="text" placeholder="Pickup Country" class="form-control mb-3" name="Pickup_Country" ngModel>
-  <input type="text" placeholder="Delivery Country" class="form-control mb-3" name="Delivery_Country" ngModel>
-  <input type="text" placeholder="Pickup Address" class="form-control mb-3" name="Pickup_Address" ngModel>
-  <input type="text" placeholder="Delivery Address" class="form-control mb-3" name="Delivery_Address" ngModel>
-  <input type="text" placeholder="Total Number of Packages" class="form-control mb-3" name="Total_Number_of_Packages" ngModel>
-  <input type="text" placeholder="Total Net Weight" class="form-control mb-3" name="Total_Net_Weight" ngModel>
-  <input type="text" placeholder="Total Gross weight" class="form-control mb-3" name="Total_Gross_weight" ngModel>
-</div>
+<form #createRfq="ngForm" class="p-4" (ngSubmit)="createRFQ(createRfq.value)">
+  <div class="form-group">
+<!--    <app-main-rfq-form></app-main-rfq-form>-->
+
+    <input name="Request_Title" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Title" ngModel>
+    <input name="Commodity" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Commodity" ngModel>
+    <div class="form-floating mb-2">
+      <textarea name="Note" class="form-control" placeholder="Leave a comment here" id="noteTextarea" ngModel></textarea>
+      <label for="noteTextarea">Note</label>
+    </div>
+
+    <input type="text" placeholder="FCL - LCL..." class="form-control mb-3" name="FCL_LCL" ngModel>
+    <input type="text" placeholder="CBM" class="form-control mb-3" name="CBM" ngModel>
+    <input type="text" placeholder="Equipment Type" class="form-control mb-3" name="Equipment_Type" ngModel>
+    <input type="text" placeholder="maximum per item weight kg" class="form-control mb-3" name="maximum_per_item_weight_kg" ngModel>
+    <input type="text" placeholder="Shipping Term" class="form-control mb-3" name="Shipping_Term" ngModel>
+    <input type="text" placeholder="Incoterm" class="form-control mb-3" name="Incoterm" ngModel>
+    <input type="checkbox" name="Need_Insurance" ngModel>
+    <input type="text" placeholder="Value of Goods" class="form-control mb-3" name="Value_of_Goods" ngModel>
+    <input type="checkbox" name="Dangerous_Commodity" ngModel>
+    <input type="text" placeholder="Pickup Country" class="form-control mb-3" name="Pickup_Country" ngModel>
+    <input type="text" placeholder="Delivery Country" class="form-control mb-3" name="Delivery_Country" ngModel>
+    <input type="text" placeholder="Pickup Address" class="form-control mb-3" name="Pickup_Address" ngModel>
+    <input type="text" placeholder="Delivery Address" class="form-control mb-3" name="Delivery_Address" ngModel>
+    <input type="text" placeholder="Total Number of Packages" class="form-control mb-3" name="Total_Number_of_Packages" ngModel>
+    <input type="text" placeholder="Total Net Weight" class="form-control mb-3" name="Total_Net_Weight" ngModel>
+    <input type="text" placeholder="Total Gross weight" class="form-control mb-3" name="Total_Gross_weight" ngModel>
+    <input type="submit" class="btn btn-outline-primary">
+  </div>
+</form>
