--- a/app/RFQ_Components/Courier/Courier.html
+++ b/app/RFQ_Components/Courier/Courier.html
@@ -1,43 +1,63 @@
 <form [formGroup]="this.formGroup" #createRfq="ngForm" class="p-4" (ngSubmit)="createRFQ(createRfq.value)">
   <div class="form-group">
-<!--    <app-main-rfq-form></app-main-rfq-form>-->
-
-    <input formControlName="Request_Title" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Title">
-    <input formControlName="Commodity" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Commodity">
-    <div class="form-floating mb-2">
-      <textarea formControlName="Note" class="form-control" placeholder="Leave a comment here" id="noteTextarea"></textarea>
+    <div>
+      <label for="commodity">Commodity</label>
+      <input id="commodity" formControlName="Commodity" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Commodity">
+    </div>
+    <div>
       <label for="noteTextarea">Note</label>
+      <textarea formControlName="Note" class="form-control" placeholder="Leave a comment here" id="noteTextarea"></textarea>
     </div>
 
-    <input type="text" placeholder="FCL - LCL..." class="form-control mb-3" formControlName="FCL_LCL">
-    <input type="text" placeholder="CBM" class="form-control mb-3" formControlName="CBM">
-    <input type="text" placeholder="Insurance Type" class="form-control mb-3" formControlName="Equipment_Type">
-    <input type="text" placeholder="maximum per item weight kg" class="form-control mb-3" formControlName="maximum_per_item_weight_kg">
-
-    <select class="form-control mb-3" formControlName="Shipping_Term">
-      <option>-- None --</option>
-      <option *ngFor="let term of terms" [ngValue]="term">{{ term }}</option>
-    </select>
-    <select class="form-control mb-3" formControlName="Incoterm">
-      <option>-- None --</option>
-      <option *ngFor="let term of incoterms" [ngValue]="term">{{ term }}</option>
-    </select>
     <div>
-      <label>Need Insurance:</label>&nbsp;&nbsp;
-      <input type="checkbox" formControlName="Need_Insurance">
+      <label>Shipping Term</label>
+      <select class="form-control mb-3" formControlName="Shipping_Term">
+        <option *ngFor="let term of terms" [ngValue]="term">{{ term }}</option>
+      </select>
     </div>
-    <input type="text" placeholder="Value of Goods" class="form-control mb-3" formControlName="Value_of_Goods">
     <div>
-      <label>Dangerous Commodity</label>&nbsp;&nbsp;
-      <input type="checkbox" formControlName="Dangerous_Commodity">
+      <label>Incoterm</label>
+      <select class="form-control mb-3" formControlName="Incoterm">
+        <option *ngFor="let term of incoterms" [ngValue]="term">{{ term }}</option>
+      </select>
+    </div>
+    <div>
+      <label for="need_insurance">Need Insurance:</label>&nbsp;&nbsp;
+      <input id="need_insurance" type="checkbox" formControlName="Need_Insurance">
+    </div>
+    <div>
+      <label for="value_of_goods">Value Of Goods</label>
+      <input id="value_of_goods" type="number" placeholder="Value of Goods" class="form-control mb-3" formControlName="Value_of_Goods">
+    </div>
+    <div>
+      <label for="dang_commodity">Dangerous Commodity</label>&nbsp;&nbsp;
+      <input id="dang_commodity" type="checkbox" formControlName="Dangerous_Commodity">
     </div>
 
-    <input type="text" placeholder="Pickup Country" class="form-control mb-3" formControlName="Pickup_Country">
-    <input type="text" placeholder="Delivery Country" class="form-control mb-3" formControlName="Delivery_Country">
-    <input type="text" placeholder="Pickup Address" class="form-control mb-3" formControlName="Pickup_Address">
-    <input type="text" placeholder="Delivery Address" class="form-control mb-3" formControlName="Delivery_Address">
-    <input type="text" placeholder="POL Port of Loading" class="form-control mb-3" formControlName="POL_Port_of_Loading">
-    <input type="text" placeholder="POL Port of Discharge" class="form-control mb-3" formControlName="POD_Port_of_Discharge">
+    <div>
+      <label for="pickup_country"></label>
+      <input id="pickup_country" type="text" placeholder="Pickup Country" class="form-control mb-3" formControlName="Pickup_Country">
+    </div>
+    <div>
+      <label for="delivery_country">Delivery Country</label>
+      <input id="delivery_country" type="text" placeholder="Delivery Country" class="form-control mb-3" formControlName="Delivery_Country">
+    </div>
+    <div>
+      <label for="pickup_address">Pickup Address</label>
+      <input id="pickup_address" type="text" placeholder="Pickup Address" class="form-control mb-3" formControlName="Pickup_Address">
+    </div>
+    <div>
+      <label for="delivery_address">Delivery Address</label>
+      <input id="delivery_address" type="text" placeholder="Delivery Address" class="form-control mb-3" formControlName="Delivery_Address">
+    </div>
+    <div>
+      <label for="pol_loading">POL Port Of Loading</label>
+      <input id="pol_loading" type="text" placeholder="POL Port of Loading" class="form-control mb-3" formControlName="POL_Port_of_Loading">
+    </div>
+    <div>
+      <label for="pol_discharge">POL Port Of Discharge</label>
+      <input id="pol_discharge" type="text" placeholder="POL Port of Discharge" class="form-control mb-3" formControlName="POD_Port_of_Discharge">
+    </div>
 
     <input type="text" placeholder="Total Number of Packages" class="form-control mb-3" formControlName="Total_Number_of_Packages">
     <input type="text" placeholder="Total Net Weight" class="form-control mb-3" formControlName="Total_Net_Weight">
