--- a/app/RFQ_Components/Insurance/Insurance.html
+++ b/app/RFQ_Components/Insurance/Insurance.html
@@ -1,24 +1,45 @@
 <form [formGroup]="this.formGroup" #createRfq="ngForm" class="p-4" (ngSubmit)="createRFQ(createRfq.value)">
   <div class="form-group">
-<!--    <app-main-rfq-form></app-main-rfq-form>-->
-
-    <input formControlName="Request_Title" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Title">
-    <input formControlName="Commodity" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Commodity">
-    <div class="form-floating mb-2">
-      <textarea formControlName="Note" class="form-control" placeholder="Leave a comment here" id="noteTextarea"></textarea>
+    <div>
+      <label for="commodity">Commodity</label>
+      <input id="commodity" formControlName="Commodity" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Commodity">
+    </div>
+    <div>
       <label for="noteTextarea">Note</label>
+      <textarea formControlName="Note" class="form-control" placeholder="Leave a comment here" id="noteTextarea"></textarea>
     </div>
 
-    <input type="text" placeholder="FCL - LCL..." class="form-control mb-3" formControlName="FCL_LCL">
-    <input type="text" placeholder="CBM" class="form-control mb-3" formControlName="CBM">
-    <input type="text" placeholder="Insurance Type" class="form-control mb-3" formControlName="Equipment_Type">
-    <input type="text" placeholder="City" class="form-control mb-3" formControlName="City">
-    <input type="text" placeholder="maximum per item weight kg" class="form-control mb-3" formControlName="maximum_per_item_weight_kg">
-    <input type="text" placeholder="Address" class="form-control mb-3" formControlName="Address">
-    <input type="text" placeholder="Time Needed hours" class="form-control mb-3" formControlName="Time_Needed_hours">
+    <div class="mt-2">
+      <label>Shipping Mode</label>
+      <select class="form-control mb-3" formControlName="Shipping_Mode">
+        <option *ngFor="let mode of shipping_modes" [ngValue]="mode">{{ mode }}</option>
+      </select>
+    </div>
+    <div class="mt-2">
+      <label>Coverage</label>
+      <select class="form-control mb-3" formControlName="Coverage">
+        <option *ngFor="let cove of coves" [ngValue]="cove">{{ cove }}</option>
+      </select>
+    </div>
+    <div class="mt-2">
+      <label>Country of Origin</label>
+      <select class="form-control mb-3" formControlName="Country_of_Origin">
+        <option *ngFor="let countries of country_origin" [ngValue]="countries">{{ countries }}</option>
+      </select>
+    </div>
+    <div class="mt-2">
+      <label>Country of Destination</label>
+      <select class="form-control mb-3" formControlName="Country_of_Destination">
+        <option *ngFor="let countries of country_destination" [ngValue]="countries">{{ countries }}</option>
+      </select>
+    </div>
+    <div class="mt-2">
+      <label>Policy Type</label>
+      <select class="form-control mb-3" formControlName="Policy_Type">
+        <option *ngFor="let type of policy_types" [ngValue]="type">{{ type }}</option>
+      </select>
+    </div>
 
-    <label>Description</label>
-    <textarea type="text" placeholder="Description..." class="form-control mb-3" formControlName="Description" row="3"></textarea>
     <input type="submit" class="btn btn-outline-primary">
   </div>
 </form>
