--- a/app/RFQ_Components/Storage/StorageComp.html
+++ b/app/RFQ_Components/Storage/StorageComp.html
@@ -1,52 +1,41 @@
 <form [formGroup]="this.formGroup" #createRfq="ngForm" class="p-4" (ngSubmit)="createRFQ(createRfq.value)">
   <div class="form-group">
-<!--    <app-main-rfq-form></app-main-rfq-form>-->
-
-    <input formControlName="Request_Title" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Title">
-    <input formControlName="Commodity" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Commodity">
-    <div class="form-floating mb-2">
-      <textarea formControlName="Note" class="form-control" placeholder="Leave a comment here" id="noteTextarea"></textarea>
+    <div>
+      <label for="commodity">Commodity</label>
+      <input id="commodity" formControlName="Commodity" class="form-control mb-2" type="text" required autocomplete="off" placeholder="Commodity">
+    </div>
+    <div>
       <label for="noteTextarea">Note</label>
+      <textarea formControlName="Note" class="form-control" placeholder="Leave a comment here" id="noteTextarea"></textarea>
     </div>
 
-    <input type="text" placeholder="FCL - LCL..." class="form-control mb-3" formControlName="FCL_LCL">
-    <input type="text" placeholder="CBM" class="form-control mb-3" formControlName="CBM">
-    <input type="text" placeholder="Insurance Type" class="form-control mb-3" formControlName="Equipment_Type">
-    <input type="text" placeholder="maximum per item weight kg" class="form-control mb-3" formControlName="maximum_per_item_weight_kg">
-    <select class="form-control mb-3" formControlName="Space_Type">
-      <option>-- None --</option>
-      <option *ngFor="let space of spaces" [ngValue]="space">{{ space }}</option>
-    </select>
-    <input type="text" placeholder="City..." class="form-control mb-3" formControlName="City">
-    <input type="text" placeholder="Preferred District..." class="form-control mb-3" formControlName="Preferred_District">
+    <div>
+      <label>Space Type</label>
+      <select class="form-control mb-3" formControlName="Space_Type">
+        <option *ngFor="let space of space_types" [ngValue]="space">{{ space }}</option>
+      </select>
+    </div>
+    <div>
+      <label>Storage Type</label>
+      <select class="form-control mb-3" formControlName="Storage_Type">
+        <option *ngFor="let space of storage_types" [ngValue]="space">{{ space }}</option>
+      </select>
+    </div>
+    <div class="mt-2">
+      <label>City</label>
+      <input type="text" placeholder="City..." class="form-control mb-3" formControlName="City">
+    </div>
+    <div class="mt-2">
+      <label>Preferred District</label>
+      <input type="text" placeholder="Preferred District..." class="form-control mb-3" formControlName="Preferred_District">
+    </div>
+    <div class="mt-2">
+      <label>Space</label>
+      <input type="number" placeholder="Space..." class="form-control mb-3" formControlName="Space">
+    </div>
 
     <input type="date" placeholder="Duration From..." class="form-control mb-3" formControlName="From">
     <input type="date" placeholder="Duration To..." class="form-control mb-3" formControlName="To">
-
-    <select class="form-control mb-3" formControlName="Shipping_Term">
-      <option>-- None --</option>
-      <option *ngFor="let term of incoterms" [ngValue]="term">{{ term }}</option>
-    </select>
-    <select class="form-control mb-3" formControlName="Incoterm">
-      <option>-- None --</option>
-      <option *ngFor="let term of incoterms" [ngValue]="term">{{ term }}</option>
-    </select>
-    <div>
-      <label>Need Insurance:</label>&nbsp;&nbsp;
-      <input type="checkbox" formControlName="Need_Insurance">
-    </div>
-    <input type="text" placeholder="Value of Goods" class="form-control mb-3" formControlName="Value_of_Goods">
-    <div>
-      <label>Dangerous Commodity</label>&nbsp;&nbsp;
-      <input type="checkbox" formControlName="Dangerous_Commodity">
-    </div>
-
-    <input type="text" placeholder="Pickup Country" class="form-control mb-3" formControlName="Pickup_Country">
-    <input type="text" placeholder="Delivery Country" class="form-control mb-3" formControlName="Delivery_Country">
-    <input type="text" placeholder="Pickup Address" class="form-control mb-3" formControlName="Pickup_Address">
-    <input type="text" placeholder="Delivery Address" class="form-control mb-3" formControlName="Delivery_Address">
-    <input type="text" placeholder="POL Port of Loading" class="form-control mb-3" formControlName="POL_Port_of_Loading">
-    <input type="text" placeholder="POL Port of Discharge" class="form-control mb-3" formControlName="POD_Port_of_Discharge">
 
     <input type="text" placeholder="Total Number of Packages" class="form-control mb-3" formControlName="Total_Number_of_Packages">
     <input type="text" placeholder="Total Net Weight" class="form-control mb-3" formControlName="Total_Net_Weight">
@@ -85,8 +74,6 @@
       </div>
     </div>
 
-    <label>Description</label>
-    <textarea type="text" placeholder="Description..." class="form-control mb-3" formControlName="Description" row="3"></textarea>
     <input type="submit" class="btn btn-outline-primary">
   </div>
 </form>
